# monochrome_sensor

./: CMakeLists.txt  project.cpp  report.docx
